# drumbeat-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  deploy.yml
benches/: sync_bench.rs
examples/: simple.rs
src/: lib.rs
src/event/: dispatcher.rs  mod.rs  observable.rs  ops.rs  scheduler.rs  subject.rs  subscription.rs
src/sync/: buffer.rs  executor.rs  mod.rs  runtime.rs  spinlock.rs  task.rs  threadpool.rs  worker.rs
src/utils/: mod.rs  sync.rs  testing.rs
tests/: event_test.rs  sync_test.rs
