[package]
name = "drumbeat"
version = "0.0.2"
description = "A Rust to GLSL/SPIR-V compiler framework. The goal of this crate is to allow creation of GLSL shaders written in pure rust within a crate."
authors = ["Patrick Hadlaw <patrickhadlaw@gmail.com>"]
repository = "https://github.com/patrickhadlaw/drumbeat-rs"
license-file = "LICENSE"
edition = "2018"

[dependencies]
num_cpus = "1.13.0"
log = "0.4"
lazy_static = "1.4.0"
