[package]
name = "drumbeat"
version = "0.1.0"
description = "An event handling system aimed towards real-time applications such as GUIs and Game Engines."
authors = ["Patrick Hadlaw <patrickhadlaw@gmail.com>"]
repository = "https://github.com/patrickhadlaw/drumbeat-rs"
license-file = "LICENSE"
edition = "2018"

[dependencies]
num_cpus = "1.13.0"
log = "0.4"
lazy_static = "1.4.0"
